# docpod

./: .env.example  .gitignore  LICENSE  README.md  config.example.toml  pyproject.toml
prompts/: extract.md  merge.md  script.md
src/docpod/: __init__.py  cli.py  config.py  errors.py
src/docpod/llm/: __init__.py  client.py  extract.py  prompts.py  script.py
src/docpod/parsing/: __init__.py  docx.py  pdf.py  text.py
src/docpod/pipeline/: __init__.py  audio.py  run.py  stages.py
src/docpod/tts/: __init__.py  base.py  elevenlabs.py  openai.py
tests/: test_parsing.py  test_resume.py
