[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docpod"
version = "0.1.0"
description = "Turn documents into podcasts, locally. Bring your own API keys."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "docpod contributors" }]
keywords = ["podcast", "tts", "pdf", "cli", "local-first"]
dependencies = [
    "typer>=0.12",
    "python-dotenv>=1.0",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "anthropic>=0.40",
    "openai>=1.50",
    "elevenlabs>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
docpod = "docpod.cli:app"

[project.urls]
Homepage = "https://github.com/myrrym/docpod"

[tool.hatch.build.targets.wheel]
packages = ["src/docpod"]

# Bundle the editable prompt files into installed wheels; source checkouts
# read them from the repo-root prompts/ directly.
[tool.hatch.build.targets.wheel.force-include]
"prompts" = "docpod/prompts"
